--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
  <meta charset="utf-8" />
  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body class="m-1 p-1">
 <h3 class="bg-primary text-white p-3">Lista de tarefas de Elmano</h3>
- <div class="my-1">
+ 
+<div class="my-1">
    <input class="form-control" />
-   <button class="btn btn-primary mt-1">Add</button>
+   <button class="btn btn-primary mt-2 mb-2 p-2">Add</button>
  </div>
- <table class="table table-striped table-bordered">
+
+ <table class="table table-striped table-bordered table-sm">
    <thead>
      <tr>
        <th>Descrição</th>
@@ -25,6 +28,27 @@
      <tr><td>Assistir videoaula do curso de Python</td><td>No</td></tr>
    </tbody>
  </table>
+
+ <!--Bootstrap e criação de formulários-->
+ <br><br>
+ <form>
+    <div class="form-group">
+      <label>Tarefa</label>
+      <input class="form-control" />
+    </div>
+
+    <div class="form-group">
+      <label>Localização</label>
+      <input class="form-control" />
+    </div>
+
+    <div class="form-group">
+      <input type="checkbox"/>
+      <label>Realizada</label>
+    </div>
+
+    <button class="btn btn-primary">Adicionar</button>
+  </form>
 </body>
 </html>
 
