--- a/index.html
+++ b/index.html
@@ -1,55 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>ToDo</title>
- <meta charset="utf-8" />
- <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>ToDo</title>
+    <meta charset="utf-8" />
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+          rel="stylesheet" />
+    <style>
+      #gridContainer{padding: 20px;}
+        .row > div {
+                    border: 1px solid lightgrey; padding: 10px;
+                    background-color: aliceblue; margin: 5px 0;
+                    }
+    </style>
 </head>
-
-<body class="m-1 p-1">
-<h3 class="bg-primary text-white p-3">Lista de tarefas de Elmano</h3>
- 
-<div class="my-1">
-   <input class="form-control" />
-   <button class="btn btn-primary mt-2 mb-2 p-2">Add</button>
- </div>
-
- <table class="table table-striped table-bordered table-sm">
-   <thead>
-     <tr>
-       <th>Descrição</th>
-       <th>Concluída</th>
-     </tr>
-   </thead>
-   <tbody>
-     <tr><td>Preparar aula de LPW</td><td>No</td></tr>
-     <tr><td>Corrigir provas</td><td>No</td></tr>
-     <tr><td>Reunir-se com equipe do projeto</td><td>Yes</td></tr>
-     <tr><td>Assistir videoaula do curso de Python</td><td>No</td></tr>
-   </tbody>
- </table>
-
- <!--Bootstrap e criação de formulários-->
- <br><br>
- <form>
-    <div class="form-group">
-      <label>Tarefa</label>
-      <input class="form-control" />
+<body class="m-2">
+    <h3>Grid Layout</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">3</div>
+            <div class="col-sm-4">4</div>
+            <div class="col-sm-5">5</div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">6</div>
+            <div class="col-sm-6">6</div>
+        </div>
+        <div class="row">
+            <div class="col-sm-11">11</div>
+            <div class="col-sm-1">1</div>
+        </div>
     </div>
-
-    <div class="form-group">
-      <label>Localização</label>
-      <input class="form-control" />
-    </div>
-
-    <div class="form-group">
-      <input type="checkbox"/>
-      <label>Realizada</label>
-    </div>
-
-    <button class="btn btn-primary">Adicionar</button>
-  </form>
 </body>
 </html>
-
-
